--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/backgrounds.js"></script>
 </body>
 
 </html>
